<resources>
    <string name="app_name">College Buddy</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="Register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enterEmail">Email</string>
    <string name="orlogin">Or Login</string>
    <string name="register_with_new_email_id">Register with new email id</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_resources">Add resources</string>
    <string name="log_out">Log Out</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="download">"Download "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>